--- a/ios/BulletTime/Base.lproj/Shoot.storyboard
+++ b/ios/BulletTime/Base.lproj/Shoot.storyboard
@@ -44,7 +44,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCW-aw-lIz">
                                 <rect key="frame" x="0.0" y="378" width="320" height="190"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="to control the shutter for everyone" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYA-2z-3Vg">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="to control the shutter for everyone" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dYA-2z-3Vg">
                                         <rect key="frame" x="20" y="57" width="280" height="18"/>
                                         <fontDescription key="fontDescription" name="Circular-Bold" family="Circular" pointSize="14"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -65,7 +65,7 @@
                                             <action selector="buttonHostPressed:" destination="sen-Tm-IzU" eventType="touchUpInside" id="Zhx-hc-ywv"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Are you the host?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bA-lj-n7j">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Are you the host?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bA-lj-n7j">
                                         <rect key="frame" x="20" y="20" width="224" height="35"/>
                                         <fontDescription key="fontDescription" name="Circular-Black" family="Circular" pointSize="27"/>
                                         <nil key="highlightedColor"/>
@@ -402,29 +402,42 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cyK-kv-RhE">
                                 <rect key="frame" x="0.0" y="444" width="320" height="124"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybC-Qo-M7V" customClass="DesignableButton" customModule="BulletTime" customModuleProvider="target">
-                                        <rect key="frame" x="131" y="32" width="60" height="60"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ybC-Qo-M7V" customClass="DesignableButton" customModule="BulletTime" customModuleProvider="target">
+                                        <rect key="frame" x="85" y="37" width="50" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="OqB-sg-SBd"/>
-                                            <constraint firstAttribute="height" constant="60" id="gQc-Yl-Nl3"/>
+                                            <constraint firstAttribute="width" constant="50" id="OqB-sg-SBd"/>
+                                            <constraint firstAttribute="height" constant="50" id="gQc-Yl-Nl3"/>
                                         </constraints>
                                         <state key="normal" image="icon-share-white">
                                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <real key="value" value="30"/>
+                                                <real key="value" value="25"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="buttonSharePressed:" destination="ig8-EP-sVl" eventType="touchUpInside" id="0me-kh-4CJ"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lQI-Pf-pOQ">
+                                        <rect key="frame" x="185" y="37" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="quw-nM-rVp"/>
+                                            <constraint firstAttribute="height" constant="50" id="ueH-uM-dXV"/>
+                                        </constraints>
+                                        <state key="normal" image="button-save-as-video"/>
+                                        <connections>
+                                            <action selector="buttonSavePressed:" destination="ig8-EP-sVl" eventType="touchUpInside" id="yFH-wm-gpx"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="ybC-Qo-M7V" firstAttribute="centerX" secondItem="cyK-kv-RhE" secondAttribute="centerX" id="Zbh-to-EhH"/>
+                                    <constraint firstItem="lQI-Pf-pOQ" firstAttribute="centerY" secondItem="ybC-Qo-M7V" secondAttribute="centerY" id="B41-gS-ohO"/>
+                                    <constraint firstItem="lQI-Pf-pOQ" firstAttribute="centerX" secondItem="cyK-kv-RhE" secondAttribute="centerX" constant="50" id="TiT-ck-xq1"/>
+                                    <constraint firstItem="ybC-Qo-M7V" firstAttribute="centerX" secondItem="cyK-kv-RhE" secondAttribute="centerX" constant="-50" id="Zbh-to-EhH"/>
                                     <constraint firstItem="ybC-Qo-M7V" firstAttribute="centerY" secondItem="cyK-kv-RhE" secondAttribute="centerY" id="kFU-5u-2Gc"/>
                                 </constraints>
                             </view>
@@ -629,6 +642,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="button-save-as-video" width="50" height="50"/>
         <image name="icon-back-grey" width="17" height="10"/>
         <image name="icon-back-white" width="17" height="10"/>
         <image name="icon-share-white" width="27" height="27"/>
